--- a/index.html
+++ b/index.html
@@ -1,37 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Project 1</title>
-   <link rel="stylesheet" href="\css\style.css">
-  <script defer src="\js\app.js"></script>
+    <link rel="stylesheet" href="\css\style.css">
+    <script defer src="\js\app.js"></script>
 </head>
+
 <body>
-    <h1> Game's name </h1>
+    <div id="game-container">
+        <h1> Moba Moba </h1>
 
-    <!-- Message -->
-     <div id="message" class="message"></div>
+        <!-- Message -->
+        <div id="message" class="message"></div>
 
-    <!-- Game Information -->
-<div class="info">
-   <p>Lives: <span id="lives">❤️❤️❤️</span></p>
-   <p>Score: <span id="score">0</span></p>
-   <!-- <p>High Score: <span id="hi-score">0</span></p>
-</div> -->
+        <!-- Game Information -->
+        <div class="info">
+            <p class="lives">Lives: <span id="lives">❤️❤️❤️</span></p>
+            <p class="score">Score: <span id="score">0</span></p>
+            <!-- <p>High Score: <span id="hi-score">0</span></p> -->
+        </div>
 
-   <!-- Grid Container -->
-    <div id="grid-wrapper">
-        <div class="grid"></div>
+        <!-- Grid Container -->
+        <div id="grid-wrapper">
+            <div class="grid"></div>
 
-    <!-- <div class="game-container" id="grid"></div> -->
+            <!-- <div class="game-container" id="grid"></div> -->
 
-    <!-- control -->
-     <button id="left-btn"></button>
-     <button id="right-btn"></button>
+            <!-- control -->
+            <button id="left-btn"></button>
+            <button id="right-btn"></button>
+            <button id="restart-btn">Restart</button>
 
-
-    
+        </div>
     </div>
 </body>
 </html>
