--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     <title>Project 1</title>
     <link rel="stylesheet" href="\css\style.css">
     <script defer src="\js\app.js"></script>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
