change the monkey size and playing on the padding of the grid

--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
     <link rel="stylesheet" href="\css\style.css">
     <script defer src="\js\app.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
 </head>
 
 <body>
     <div id="game-container">
-        <h1> Moba Moba </h1>
+        <h1> 🍌🐒Moba Moba🐒🍌 </h1>
 
         <!-- Message -->
         <div id="message" class="message"></div>
@@ -28,9 +28,14 @@
 
         <!-- Grid Container -->
         <div id="grid-wrapper">
-            <div class="grid"></div>
+            <div class="grid">
+            </div>
 
-            <!-- <div class="game-container" id="grid"></div> -->
+               <!-- game over -->
+            <!-- <div id="game-over" class="game-over">
+                <img src="" alt="Game Over" />
+            </div> -->
+
 
             <!-- control -->
             <button id="left-btn"></button>
@@ -40,4 +45,5 @@
         </div>
     </div>
 </body>
+
 </html>
