updating the game-over function

--- a/index.html
+++ b/index.html
@@ -23,7 +23,6 @@
         <div class="info">
             <p class="lives">Lives: <span id="lives">❤️❤️❤️</span></p>
             <p class="score">Score: <span id="score">0</span></p>
-            <!-- <p>High Score: <span id="hi-score">0</span></p> -->
         </div>
 
         <!-- Grid Container -->
@@ -31,18 +30,22 @@
             <div class="grid">
             </div>
 
-               <!-- game over -->
-            <!-- <div id="game-over" class="game-over">
-                <img src="" alt="Game Over" />
-            </div> -->
+             <!-- game over -->
+            <div id="game-over">
+                <h2>💀 GAME OVER 💀</h2>
+                <p>Final Score: <span id="final-score">0</span></p>
+                <p>Best Score: <span id="best-score">0</span></p>
+                <button id="play-again">Play Again</button>
+            </div>
 
 
             <!-- control -->
             <button id="left-btn"></button>
             <button id="right-btn"></button>
             <button id="restart-btn">Restart</button>
-
         </div>
+
+       
     </div>
 </body>
 
