--- a/index.html
+++ b/index.html
@@ -38,6 +38,14 @@
                 <button id="play-again">Play Again</button>
             </div>
 
+            <audio id="bomb-sound" src="../Project 1/assets/bomb sound.wav"></audio>
+            <audio id="banana-fall" src="../Project 1/assets/falling sound for banana.wav"></audio>
+            <audio id="rotten-fall" src="../Project 1/assets/falling rotten banana.wav"></audio>
+            <audio id="gold-fall" src="../Project 1/assets/falling sound.mp3"></audio>
+            <audio id="extra-live" src="../Project 1/assets/extra live sound.wav"></audio>
+            <audio id="game-over-sound" src="../Project 1/assets/game-over-deep-male.mp3"></audio>
+            <audio id="step sound" src="../Project 1/assets/footsteps-on-tall-grass.wav"></audio>
+
 
             <!-- control -->
             <button id="left-btn"></button>
