adding pause button

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
             <button id="left-btn"></button>
             <button id="right-btn"></button>
             <button id="restart-btn">Restart</button>
+            <button id="pause-btn">pause</button>
         </div>
 
        
