--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
                 <button id="play-again">Play Again</button>
             </div>
 
-            <audio id="bomb-sound" src="../Project 1/assets/bomb sound.wav"></audio>
-            <audio id="banana-sound" src="../Project 1/assets/falling sound for banana.wav"></audio>
-            <audio id="rotten-sound" src="../Project 1/assets/falling rotten banana.wav"></audio>
-            <audio id="gold-sound" src="../Project 1/assets/falling sound.mp3"></audio>
-            <audio id="heart-sound" src="../Project 1/assets/extra live sound.wav"></audio>
-            <audio id="game-over-sound" src="../Project 1/assets/game-over-deep-male.mp3"></audio>
-            <audio id="step-sound" src="../Project 1/assets/footsteps-on-tall-grass.wav"></audio>
+            <audio id="bomb-sound" src="assets/bomb sound.wav"></audio>
+            <audio id="banana-sound" src="assets/falling sound for banana.wav"></audio>
+            <audio id="rotten-sound" src="assets/falling rotten banana.wav"></audio>
+            <audio id="gold-sound" src="assets/falling sound.mp3"></audio>
+            <audio id="heart-sound" src="assets/extra live sound.wav"></audio>
+            <audio id="game-over-sound" src="assets\sad-game-over.wav"></audio>
+            <audio id="step-sound" src="assets/footsteps-on-tall-grass.wav"></audio>
 
 
             <!-- control -->
