adding start page with button

--- a/index.html
+++ b/index.html
@@ -25,6 +25,10 @@
             <p class="score">Score: <span id="score">0</span></p>
         </div>
 
+        <div id="start-screen">
+            <button id="start-btn">start Game</button>
+        </div>
+
         <!-- Grid Container -->
         <div id="grid-wrapper">
             <div class="grid">
@@ -45,6 +49,7 @@
             <audio id="heart-sound" src="assets/extra live sound.wav"></audio>
             <audio id="game-over-sound" src="assets\sad-game-over.wav"></audio>
             <audio id="step-sound" src="assets/footsteps-on-tall-grass.wav"></audio>
+            <audio id="backgroung-sound" src="assets\game-music-loop.mp3"></audio>
 
 
             <!-- control -->
