manipulating on buttons and the background of start screen

--- a/index.html
+++ b/index.html
@@ -26,12 +26,17 @@
         </div>
 
         <div id="start-screen">
-            <button id="start-btn">start Game</button>
+            <h1>Moba Moba</h1>
+            <button id="start-btn"></button>
         </div>
 
         <!-- Grid Container -->
         <div id="grid-wrapper">
             <div class="grid">
+                <div class="control-btn">
+            <button id="restart-btn">🔄</button>
+            <button id="pause-btn">⏸️</button>
+            </div>
             </div>
 
              <!-- game over -->
@@ -53,10 +58,12 @@
 
 
             <!-- control -->
+            <div class="control-monkey-btn">
             <button id="left-btn"></button>
             <button id="right-btn"></button>
-            <button id="restart-btn">Restart</button>
-            <button id="pause-btn">pause</button>
+            </div>
+
+        
         </div>
 
        
