changing the audio of the steps

--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
             <audio id="gold-sound" src="assets/falling sound.mp3"></audio>
             <audio id="heart-sound" src="assets/extra live sound.wav"></audio>
             <audio id="game-over-sound" src="assets\sad-game-over.wav"></audio>
-            <audio id="step-sound" src="assets/footsteps-on-tall-grass.wav"></audio>
+            <audio id="step-sound" src="assets/footsteps-on-grass.wav.mp3"></audio>
             <audio id="backgroung-sound" src="assets\game-music-loop.mp3"></audio>
 
 
