manipulating on CSS

--- a/index.html
+++ b/index.html
@@ -25,9 +25,11 @@
             <p class="score">Score: <span id="score">0</span></p>
         </div>
 
-        <div id="start-screen">
-            <h1>Moba Moba</h1>
+        <div id="start-screen" class="start-content">
+            <div class="start-container">
+            <h1>Moba Moba Game</h1>
             <button id="start-btn"></button>
+            </div>
         </div>
 
         <!-- Grid Container -->
@@ -54,7 +56,7 @@
             <audio id="heart-sound" src="assets/extra live sound.wav"></audio>
             <audio id="game-over-sound" src="assets\sad-game-over.wav"></audio>
             <audio id="step-sound" src="assets/footsteps-on-grass.wav.mp3"></audio>
-            <audio id="backgroung-sound" src="assets\game-music-loop.mp3"></audio>
+            <audio id="backgroung-music" src="assets/background-sound.mp3" loop preload="auto"></audio>
 
 
             <!-- control -->
