adding mute button

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     <div id="game-container">
-        <h1> 🍌🐒Moba Moba🐒🍌 </h1>
+        <h1 class=" title"> 🍌🐒Moba Moba🐒🍌 </h1>
 
         <!-- Message -->
         <div id="message" class="message"></div>
@@ -27,8 +27,8 @@
 
         <div id="start-screen" class="start-content">
             <div class="start-container">
-            <h1>Moba Moba Game</h1>
-            <button id="start-btn"></button>
+                <h1>Moba Moba Game</h1>
+                <button id="start-btn"></button>
             </div>
         </div>
 
@@ -36,12 +36,13 @@
         <div id="grid-wrapper">
             <div class="grid">
                 <div class="control-btn">
-            <button id="restart-btn">🔄</button>
-            <button id="pause-btn">⏸️</button>
-            </div>
+                    <button id="restart-btn">🔄</button>
+                    <button id="pause-btn">⏸️</button>
+                    <button id="mute-btn">🔊</button>
+                </div>
             </div>
 
-             <!-- game over -->
+            <!-- game over -->
             <div id="game-over">
                 <h2>💀 GAME OVER 💀</h2>
                 <p>Final Score: <span id="final-score">0</span></p>
@@ -56,19 +57,19 @@
             <audio id="heart-sound" src="assets/extra live sound.wav"></audio>
             <audio id="game-over-sound" src="assets\sad-game-over.wav"></audio>
             <audio id="step-sound" src="assets/footsteps-on-grass.wav.mp3"></audio>
-            <audio id="backgroung-music" src="assets/background-sound.mp3" loop preload="auto"></audio>
+            <audio id="background-music" src="assets/background-sound.mp3" loop></audio>
 
 
             <!-- control -->
             <div class="control-monkey-btn">
-            <button id="left-btn"></button>
-            <button id="right-btn"></button>
+                <button id="left-btn"></button>
+                <button id="right-btn"></button>
             </div>
 
-        
+
         </div>
 
-       
+
     </div>
 </body>
 
